# invader

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  dependencies.cmake
.github/workflows/: build.yaml  build.yml
build_scripts/: cmake_arch_linux_mingw.cmake  cmake_arch_linux_mingw.sh  cmake_arch_linux_mingw_static.cmake  cmake_arch_linux_mingw_static.sh  cmake_msys2_mingw_static.cmake  cmake_msys2_mingw_static.sh
include/invader/: command_line_option.hpp  error.hpp  printf.hpp  version.hpp
include/invader/bitmap/: bitmap_data_writer.hpp  bitmap_encode.hpp  bitmap_processor.hpp  color_plate_pixel.hpp  color_plate_scanner.hpp  pixel.hpp  swizzle.hpp
include/invader/build2/: build_workload.hpp
include/invader/compress/: ceaflate.hpp  compression.hpp
include/invader/dependency/: found_tag_dependency.hpp
include/invader/error_handler/: error_handler.hpp
include/invader/extract/: extraction.hpp
include/invader/file/: file.hpp
include/invader/hek/: class_int.hpp  constants.hpp  data_type.hpp  endian.hpp  fourcc.hpp  map.hpp  pad.hpp
include/invader/map/: map.hpp  tag.hpp
include/invader/model/: jms.hpp
include/invader/resource/: resource_map.hpp
include/invader/script/: compiler.hpp  script_tree.hpp
include/invader/sound/: sound_encoder.hpp  sound_reader.hpp
include/invader/tag/: compiled_tag.hpp
res/: invader.manifest
src/: command_line_option.hpp  eprintf.hpp  error.cpp  error.hpp  invader.cmake  invader.rc  mingw_crt_noglob.cpp  null.cpp  printf.cpp  printf.hpp  version.cmake  version.cpp  version.h  version.hpp  version_gen.sh  windows.rc
src/archive/: archive.cmake  archive.cpp  archive.rc
src/bitmap/: bitmap.cmake  bitmap.cpp  bitmap.rc  bitmap_data_writer.cpp  bitmap_data_writer.hpp  bitmap_encode.cpp  bitmap_processor.cpp  color_plate_scanner.cpp  color_plate_scanner.hpp  composite_bitmap.cpp  composite_bitmap.hpp  image_loader.cpp  image_loader.hpp  sprite.cpp  swizzle.cpp
src/bitmap/bcdec/: bcdec.h
src/bitmap/color_code/: color_codes_generator.py
src/bitmap/libtxc_dxtn/: txc_compress_dxtn.c  txc_dxtn.h  txc_fetch_dxtn.c
src/bitmap/p8/: p8_palette  palette.py
src/bitmap/stb/: stb_dxt.h  stb_impl.c
src/bludgeon/: bludgeon.cmake  bludgeon.cpp  bludgeon.rc  bludgeoner.cpp  bludgeoner.hpp
src/build2/: build_workload.cpp
src/collection/: collection.cmake  collection.cpp  collection.rc
src/compare/: compare.cmake  compare.cpp  compare.rc
src/compress/: ceaflate.cpp  compress.cmake  compress.cpp  compression.cpp
src/compress/zstd/: zstd.cmake
src/convert/: convert.cmake  convert.cpp  convert.rc
src/crc/: crc.cmake  crc.cpp  crc.rc  crc32.c  crc32.h  crc_spoof.c  crc_spoof.h
src/crc/hek/: crc.cpp  crc.hpp
src/dependency/: dependency.cmake  dependency.cpp  dependency.rc  found_tag_dependency.cpp  found_tag_dependency.hpp
src/edit/: edit.cmake  edit.cpp  edit.rc  expression.cpp  expression.hpp
src/edit/qt/: qt.cmake  qt.cpp  qt.manifest  qt.rc  qtres.qrc  tag_editor_abstract_widget.cpp  tag_editor_abstract_widget.hpp  tag_editor_array_widget.cpp  tag_editor_array_widget.hpp  tag_editor_edit_widget.cpp  tag_editor_edit_widget.hpp  tag_editor_edit_widget_view.cpp  tag_editor_edit_widget_view.hpp  tag_editor_textbox_widget.cpp  tag_editor_textbox_widget.hpp  tag_editor_widget.cpp  tag_editor_widget.hpp  tag_editor_window.cpp  tag_editor_window.hpp  tag_file.hpp  tag_tree_dialog.cpp  tag_tree_dialog.hpp  tag_tree_widget.cpp  tag_tree_widget.hpp  tag_tree_window.cpp  tag_tree_window.hpp  tag_window.cpp  tag_window.hpp  theme.cpp  theme.hpp  version.rc
src/error_handler/: error_handler.cpp
src/extract/: extract.cmake  extract.cpp  extract.rc  extraction.cpp
src/file/: file.cpp  file.hpp
src/font/: font.cmake  font.cpp  font.rc
src/hek/: class_int.cpp  class_int.hpp  constants.hpp  data_type.cpp  data_type.hpp  endian.hpp  fourcc.cpp  map.cpp  map.hpp  pad.hpp
src/index/: index.cmake  index.cpp  index.rc
src/indexer/: indexer.cmake  indexer.cpp
src/info/: info.cmake  info.cpp  info.rc  info_def.cpp  info_def.hpp
src/info/language/: language.hpp  language.py
src/lightmap/: actions.cpp  actions.hpp  lightmap.cmake  lightmap.cpp  lightmap.rc
src/map/: map.cpp  map.hpp  tag.cpp  tag.hpp
src/model/: jms.cpp  model.cmake  model.cpp  model.rc
src/recover/: recover.cmake  recover.cpp  recover.rc  recover_method.cpp  recover_method.hpp
src/refactor/: refactor.cmake  refactor.cpp  refactor.rc
src/resource/: resource.cmake  resource.cpp  resource.rc  resource_map.cpp  resource_map.hpp
src/resource/hek/: resource_map.hpp
src/resource/list/: bitmaps.tag_indices  generator.py  loc.tag_indices  resource_list.hpp  sounds.tag_indices
src/reverse_dependency/: reverse_dependency.cmake  reverse_dependency.cpp
src/scan/: scan.cmake  scan.cpp  scan.rc
src/scenario/: salamander_scenario.cpp  salamander_scenario.hpp  scenario.cmake  scenario.cpp
src/script/: compiler.cpp  compiler.hpp  script.cmake  script.cpp  script.rc  script_tree.cpp  script_tree.hpp  tokenizer.cpp  tokenizer.hpp
src/sound/: reclaimer-license.txt  sound.cmake  sound.cpp  sound.rc  sound_encoder.cpp  sound_encoder_flac.cpp  sound_encoder_ogg_vorbis.cpp  sound_encoder_wav.cpp  sound_encoder_xbox_adpcm.cpp  sound_reader.cpp  sound_reader_16_bit_pcm_big_endian.cpp  sound_reader_flac.cpp  sound_reader_ogg.cpp  sound_reader_wav.cpp  sound_reader_xbox_adpcm.cpp  wav.hpp
src/sound/adpcm_xq/: adpcm-lib.c  adpcm-lib.h
src/string/: button_type.hpp  string.cmake  string.cpp  string.rc
src/strip/: strip.cmake  strip.cpp  strip.rc
src/tag/: compiled_tag.cpp  compiled_tag.hpp  header_generator.py  header_lifter.py
src/tag/code_generator/: __main__.py  cache_deformat_data.py  check_broken_enums.py  check_invalid_indices.py  check_invalid_ranges.py  check_invalid_references.py  check_normalize.py  check_uppercase_references.py  compare.py  compile.py  definition.py  (+17 more)
src/util/: assert.hpp
src/vector-font/: vector-font.cmake  vector-font.cpp  vector-font.rc
util/: ent-plugin-generator.py
(+493 files in other folders)
